# QEC

./: .gitignore  API_CONTRACT.md  ARCHITECTURE.md  AUDIT_CHECKLIST.md  AUDIT_REPORT_PRE_V12.md  CHANGELOG.md  CLAUDE.md  COSMOVIRUS_E8_PHI_SONIFICATION.md  CURRENT_TASK.md  DOCUMENTATION.md  EXPERIMENTS.md  IMPLEMENTATION.md  IMPLEMENTATION_RULES.md  INSTALL.md  INV.md  INVARIANTS.md  PROJECT_STATE.md  QEC_Roadmap_Tightening_v2.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  ROADMAP.md  ROADMAP_EXTENSION.md  ROADMAP_EXTENSION_v2.md  SYSTEM.md  THEORY.md  USAGE.md  USAGE_GUIDE.md  benchmark_v68_3_20260317_075158.json  benchmark_v68_3_20260317_075322.json  conftest.py  dev-requirements.txt  mirror_repos.sh  package.json  pyproject.toml  pytest.ini  qec_theory_diagram.txt  release_history.json  requirements-test.txt  🔄 Roadmap Pivot — Post-v166.md
bench/: __init__.py  bp_phase_transition_experiments.py  config.py  dps_v380_eval.py  dps_v381_eval.py  schema.py  v390_verify.py
bench_reports/: bp_phase_transition_extended.py  dps_v381_eval.py  v390_verify.py
docs/: QEC_v1.6_Benchmarking_Overview.md  QUTRIT_DECODER_BENCHMARKS.md  QUTRIT_HARMONIC_QEC.md  experiments.md  nb_gradient_mutation.md  phase_diagrams.md  proof_artifact_schema.md  spectral_basin_visualization.md  trapping_set_prediction.md  v3.8.1_structural_geometry_evaluation.md
examples/: qldpc_hashing_bound_demo.py  ququart_threshold_demo.py
experiments/: bethe_hessian_diagnostics.py  eigenmode_mutation_experiment.py  eigenmode_signature_robustness.py  nb_mutation_ablation.py  run_nb_mutation_ablation.py  (+4 more)
(+2013 files in other folders)
