[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qec"
version = "11.6.1"
description = "Deterministic Tanner graph generation and QLDPC structure discovery engine"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-repeat>=0.9",
    "matplotlib>=3.5",
    "networkx>=2.6"
]

# Optional external backends — not installed by default.
# Tests requiring these are skipped when unavailable.
external = [
    "stim",
    "pymatching",
    "qec_qldpc_codes"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
qec-exp = "scripts.qec_exp:main"
